--- a/package.json
+++ b/package.json
@@ -36,6 +36,36 @@
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "@semantic-release/changelog": "^6.0.2",
+    "@semantic-release/git": "^10.0.1"
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ],
+  "release": {
+    "prepare": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      {
+        "path": "@semantic-release/git",
+        "assets": [
+          "package.json",
+          "package-lock.json",
+          "yarn.lock",
+          "CHANGELOG.md"
+        ],
+        "message": "chore: release v${nextRelease.version}"
+      }
+    ],
+    "branches": [
+      "main",
+      "next"
+    ]
   }
 }
