--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "puppeteer": "^19.6.3",
     "react": "18.2.0",
     "react-code-blocks": "^0.0.9-0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.2",
+    "@semantic-release/git": "^10.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
@@ -36,9 +39,7 @@
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.6",
-    "typescript": "4.9.5",
-    "@semantic-release/changelog": "^6.0.2",
-    "@semantic-release/git": "^10.0.1"
+    "typescript": "4.9.5"
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
