--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
-    "@heroicons/react": "^2.0.14",
+    "@heroicons/react": "^2.0.15",
     "@next/font": "^13.1.6",
     "@vercel/og": "^0.1.0",
     "framer-motion": "^9.0.2",
     "next": "latest",
-    "puppeteer": "^19.6.3",
     "react": "18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.5"
+    "react-markdown": "^8.0.5",
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer": "^19.6.3",
+    "puppeteer-core": "^19.6.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.2",
@@ -40,6 +42,9 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
