--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "5.0.0",
     "puppeteer": "^19.6.3",
     "puppeteer-core": "^19.6.3"
   },
