--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "typescript": "4.9.5"
   },
   "engines": {
-    "node": "16.x"
+    "node": "^14"
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
