--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "screenia",
   "version": "1.0.2",
-  "private": true,
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
