--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
     "@next/font": "^13.1.6",
+    "chrome-aws-lambda": "^7.0.0",
     "framer-motion": "^9.0.2",
     "next": "latest",
+    "puppeteer": "^19.6.3",
+    "puppeteer-core": "^19.6.3",
     "react": "18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
-    "chrome-aws-lambda": "^7.0.0",
-    "puppeteer": "^7.1.0",
-    "puppeteer-core": "^7.1.0"
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.2",
