--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
@@ -18,6 +19,7 @@
     "chrome-aws-lambda": "^9.1.0",
     "framer-motion": "^9.0.2",
     "next": "latest",
+    "next-sitemap": "^3.1.52",
     "puppeteer": "^10.4.0",
     "puppeteer-core": "^10.4.0",
     "react": "18.2.0",
