fix: fix sementic release issue

--- a/package.json
+++ b/package.json
@@ -54,7 +54,12 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/github",
+    [
+      "@semantic-release/github",
+      {
+        "npmPublish": false
+      }
+    ],
     [
       "@semantic-release/npm",
       {
