--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
     "@next/font": "^13.1.6",
-    "chrome-aws-lambda": "^7.0.0",
+    "chrome-aws-lambda": "^8.0.2",
     "framer-motion": "^9.0.2",
     "next": "latest",
     "next-sitemap": "^3.1.52",
-    "puppeteer": "^7.1.0",
-    "puppeteer-core": "^7.1.0",
+    "puppeteer-core": "^8.0.0",
     "react": "18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
@@ -45,7 +44,8 @@
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.6",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "puppeteer": "^8.0.0"
   },
   "engines": {
     "node": "^14"
