--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
-    "@netlify/plugin-nextjs": "^4.30.4",
     "@next/font": "^13.1.6",
     "chrome-aws-lambda": "^8.0.2",
     "framer-motion": "^9.0.2",
@@ -46,7 +45,8 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "puppeteer": "^8.0.0",
     "tailwindcss": "^3.2.6",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "@netlify/plugin-nextjs": "^4.30.4"
   },
   "engines": {
     "node": "^14"
